--- a/API/style.css
+++ b/API/style.css
@@ -1,9 +1,12 @@
 /*!
- * Documenter 2.0
- * http://rxa.li/documenter
+ * File:    style.css
+ * Project: CSCE 315 Project 1, Spring 2018
+ * Author:  Dominick Fabian
+ * Date:    03/22/18
+ * Section: 504
+ * E-mail:  easter97@tamu.edu
  *
- * Copyright 2011, Xaver Birsak
- * http://revaxarts.com
+ * Some elements of stylesheet extended from documenter class copyright Xaver Birsak
  *
  */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{
@@ -34,7 +37,13 @@ footer, header, section {
 	display:block;
 }
 a{ color:#6F6F6F; text-decoration:none; cursor:pointer; }
-a:hover { text-decoration:underline }
+a:link { color: #500000;}
+a:visited {color: #723232;}
+a:hover 
+{
+    color: #280000;
+    text-decoration:underline
+}
 p, ul, ol{
 	margin:18px 0;
 	line-height:1.5em;
@@ -117,34 +126,6 @@ strong{
 	position:relative;
 	z-index:100;
 }
-img{
-	border:0;
-}
-#documenter_copyright{
-	position:absolute;
-	bottom:10px;
-	font-size:10px;
-	right:15px;
-	width:200px;
-	text-align:right;
-	z-index:1
-}
-noscript{
-	display:block;
-	position:absolute;
-	top:238px;
-	margin:0 auto;
-	width:800px;
-	bottom:0;
-	z-index:20;
-}
-noscript p{
-	width:800px;
-	font-size:20px;
-	padding-top:20px;
-	margin:0 auto;
-	color:#4D4D4D;
-}
 .small{
 	font-size:10px;
 	letter-spacing:0;
@@ -153,16 +134,6 @@ noscript p{
 /*----------------------------------------------------------------------*/
 /* Sidebar
 /*----------------------------------------------------------------------*/
-
-#documenter_sidebar #documenter_logo{
-	display:block;
-	height:20%;
-	max-height:200px;
-	min-height:70px;
-	width:200px;
-	background-position:center center;
-	background-repeat:no-repeat;
-}
 #documenter_sidebar ul{
 	font-size:12px;
 	font-weight:700;
@@ -183,10 +154,8 @@ noscript p{
 	text-align:right;
 }
 #documenter_sidebar ul a:hover,#documenter_sidebar ul a.current{
-	-webkit-text-shadow:none;
-	-moz-text-shadow:none;
-	text-shadow:none;
 	text-decoration:none;
+    text-shadow: none;
 }
 #documenter_sidebar ul li ul{
 	border-top:0;
@@ -287,136 +256,12 @@ noscript p{
 	font-family:"Courier New", Courier, monospace;
 	font-size:12px;
 }
-#documenter_content .warning{
-	padding:10px 10px 10px 30px;
-	border:1px solid #D5D458;
-	background-color:#F0FEB1;
-	background-image:url(img/warning.png);
-	background-repeat:no-repeat;
-	background-position: 8px 11px;
-}
 #documenter_content .info{
 	padding:10px 10px 10px 30px;
-	border:1px solid #6AB3FF;
-	background-color:#A3D0FF;
-	background-image:url(img/info.png);
-	background-repeat:no-repeat;
-	background-position: 8px 11px;
+	border:1px solid #a77f7f;
+	background-color:#b99999;
 }
-#documenter_content div.alert {
-  padding: 8px 35px 8px 14px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  background-color: #fcf8e3;
-  border: 1px solid #fbeed5;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-#documenter_content div.alert-success,#documenter_content  div.alert-success div.alert-heading {
-  color: #468847;
-}
-#documenter_content div.alert-danger,#documenter_content  div.alert-error {
-  background-color: #f2dede;
-  border-color: #eed3d7;
-}
-#documenter_content div.alert-danger,
-#documenter_content div.alert-error,
-#documenter_content div.alert-danger div.alert-heading,
-#documenter_content div.alert-error div.alert-heading {
-  color: #b94a48;
-}
-#documenter_content div.alert-info {
-  background-color: #d9edf7;
-  border-color: #bce8f1;
-}
-#documenter_content div.alert-info,#documenter_content  div.alert-info div.alert-heading {
-  color: #3a87ad;
-}
-#documenter_content div.alert-block {
-  padding-top: 14px;
-  padding-bottom: 14px;
-}
-#documenter_content div.alert-block > p,#documenter_content  div.alert-block > ul {
-  margin-bottom: 0;
-}
-#documenter_content div.alert-block p + p {
-  margin-top: 5px;
-}
-
 .page-header h3{
 	font-weight: bold !important;
-	color: #3498db;
-}
-
-
-
-
-/*----------------------------------------------------------------------*/
-/* Print Styles
-/*----------------------------------------------------------------------*/
-
-@media print {
-	 * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important;
-	-ms-filter: none !important; } /* Black prints faster: sanbeiji.com/archives/953 */
-	a, a:visited { color: #444 !important; text-decoration: underline; }
-	a[href]:after { content: " (" attr(href) ")"; }
-	abbr[title]:after { content: " (" attr(title) ")"; }
-	.ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
-	pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-	thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */
-	tr, img { page-break-inside: avoid; }
-	@page { margin: 0.5cm; }
-	p, h2, h3 { orphans: 3; widows: 3; }
-	h2, h3{ page-break-after: avoid; }
-	hr { border-top:1px solid #000 !important;border-bottom:0 !important; }
-	
-	#documenter_sidebar{
-		-moz-box-shadow:none;
-		-webkit-box-shadow:none;
-		box-shadow:none;
-		position:absolute;
-		left:10px;
-		top:0;
-		width:100%;
-		margin-top:500px;
-	}
-	#documenter_sidebar ul:before { content: "Table of Contents"; }
-	
-	#documenter_sidebar ul{
-		border:0 !important;
-	}
-	#documenter_sidebar ul li{
-		border:0 !important;
-		text-align:left;
-	}
-	#documenter_sidebar ul li a{
-		border:0 !important;
-		text-align:left;
-		padding:4px;
-	}
-	#documenter_sidebar ul li a:hover{
-		border:0 !important;
-	}
-	#documenter_sidebar #documenter_logo{
-		display:none;
-	}
-	#documenter_sidebar #documenter_copyright{
-		display:none;
-	}
-	#documenter_content{
-		left:10px;
-	}
-	#documenter_cover{
-		margin-bottom:300px;
-	}
-	#documenter_content .warning{
-		background-image:url(img/warning.png) !important;
-		background-repeat:no-repeat !important;
-		background-position: 8px 11px !important;
-	}
-	#documenter_content .info{
-		background-image:url(img/info.png) !important;
-		background-repeat:no-repeat !important;
-		background-position: 8px 11px !important;
-	}
+	color: #500000;
 }
